# conversation-transcript-to-audio

./: .pre-commit-config.yaml  Cargo.toml  config.toml  test_transcript.txt  test_transcript_smaller.txt
src/: audio.rs  cache.rs  main.rs
src/transcript/: anthropic.rs  mod.rs  naive.rs
