[package]
name = "conversation-transcript-to-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
cacache = "13.0"
dirs = "6.0"
dotenv = "0.15"
envy = "0.4"
futures-util = "0.3"
itertools = "0.12"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
structopt = "0.3"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
